# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing
#
#


Feb 11, 2008
    An example of using pygame with no windowing system.  Useful for webserver
      scripts, or for little utilities.

    Updated mac_scrap to pass some tests, and raise NotImplementedError 
      otherwise.

    Further Windows build updates:
      For MinGW/MSYS the build process now finds the MSYS and MinGW
      directories automatically. gcc links to msvcr71.dll without
      requiring changes to the gcc specs file. This makes the build
      process GCC Version 4 ready. By default all DLLs are Win32 GUI,
      but can be console. The build progams will run from either the
      Windows or MSYS terminal.

      Fixed a bug where DLLs were not installed in the package directory.
      For Windows, everything now goes into the package directory.

      build_deps.py renamed to msys_build_deps.py to avoid confusion.

Jan 26, 2008
    pygame.sndarray noew can change between Numeric and numpy using the
      new methods pygame.sndarray.use_array () and
      pygame.sndarray.get_arraytypes ().

Jan 24, 2008
    Updated the configuration and build process under Windows. In
       config_msys.py and config.py os.popen is replaced with the newer
       subprocess.Popen so the MSYS will run. Calls to raw_input now
       show the prompt on an MSYS console. In an MSYS build paths
       written to Setup are now Windows paths for distutils. The hard
       coded DLL file paths have been removed from setup.py.  It now
       gets the paths from Setup. Consequently, setup.py is now VC/MinGW
       agnostic.

    Added build_deps.py, an all-in-one dependency builder for
       Windows. Requires MinGW and MSYS.

Jan 8, 2008
    pygame.surfarray now can change between Numeric and numpy using the
       new methods pygame.surfarray.use_array () and